<resources>
    <string name="app_name">MuscialStructureApp</string>
    <string name="title_library">Library</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_artists">Artists</string>
    <string name="title_songs">Songs</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_payment">Payment Screen</string>

    <string name="new_playlist">New Playlist</string>
    <string name="create_new_playlist">Create New Playlist...</string>
    <string name="buy_music">Buy Music</string>

    <string name="song_a">Song A</string>

    <string name="description_main_activity">This activity serves as the main screen for the app.
        It displays all the songs, playlists, albums and artists available on your phone.
        It also displays currently playing song along with play/pause and next controls
        at the bottom.
    </string>

    <string name="description_playlists_activity">This activity displays all the playlists user has
        created along with the default lists - Recently Played and Recently Added; and an option to
        create a new one.  </string>

    <string name="description_artists_activity">This activity displays all the songs in the phone
        grouped according to the artists.</string>

    <string name="description_songs_activity">This activity displays all the songs in the phone in
        an alphabetically sorted manner. It also displays an option to buy new songs.</string>

    <string name="description_now_playing_activity">This activity acts as a full player interface
        displaying controls such as - Play/Pause, Next, Prev, Progress bar with remaining and
        elapsed time. It also displays album artwork, song name and artist and album info
        if available.
    </string>

    <string name="description_payment_activity">To implement payment method one can use PayPal MPL
        library available
        <a href="https://developer.paypal.com/docs/classic/mobile/ht_mpl-itemPayment-Android">here</a>
    along with an how-to guide.</string>

</resources>
