<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.android.udacitymusicalstructureapp.MainActivity">
    <data>
        <variable name="mainActivity"
                  type="com.example.android.muscialstructureapp.MainActivity"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            style="@style/DescriptionTextStyle"
            android:text="@string/description_main_activity"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btn_playlists"
            style="@style/ButtonStyle"
            android:text="@string/title_playlists"
            />
        <Button
            android:id="@+id/btn_artists"
            style="@style/ButtonStyle"
            android:text="@string/title_artists"
            />

        <Button
            android:id="@+id/btn_songs"
            style="@style/ButtonStyle"
            android:text="@string/title_songs"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <include
            android:id="@+id/lay_now_playing"
            layout="@layout/item_now_playing"/>

    </LinearLayout>
</layout>